css/tinymce-codehighlight-common.css
/* Shared by all themes. */
/* Override potentially interfering Backdrop theme styles. */
pre span.comment {
  margin: 0;
  max-width: none;
  position: static;
  display: inline;
}
pre[class*="language-"] > code {
  border: none;
  padding: 0;
}
/* Overrides Oxide's content.min.css */
code[class*="language-"],
pre[class*="language-"] {
  text-shadow: none;
}
.language-css .token.string,
.style .token.string,
.token.entity,
.token.operator,
.token.url {
  background: none;
}
code[class*="language-"],
pre[class*="language-"] {
  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  font-size: 1rem;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  line-height: 1.5;
  tab-size: 4;
  hyphens: none;
}
pre[class*="language-"] {
  max-width: 100%;
  overflow-x: auto;
  padding: 1em;
  border-radius: 3px;
}
/* Inline code */
:not(pre) > code[class*="language-"] {
  padding: .2em;
  border-radius: 3px;
}
.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}
.token.entity {
  cursor: help;
}
/* Prevent unreadable code. */
.ck-content pre code {
  color: unset;
}

/* Toolbar (copy button) */
div.code-toolbar {
  position: relative;
}
div.code-toolbar .toolbar {
  position: absolute;
  top: 4px;
  right: 3px;
}
div.code-toolbar .toolbar .copy-to-clipboard-button {
  border: none;
  background: transparent;
  margin: 0;
  padding: 0;
  color: inherit;
  cursor: pointer;
}
div.code-toolbar .toolbar .copy-to-clipboard-button span {
  width: 1.5em;
  height: 1.5em;
  text-indent: -333px;
  display: block;
  overflow: hidden;
  background-color: currentColor;
  mask-image: var(--icon-copy);
  mask-repeat: no-repeat;
}
div.code-toolbar .toolbar .copy-to-clipboard-button[data-copy-state="copy-success"] span {
  mask-image: var(--icon-check);
}

